feat: get column name and status.