@@ -6,7 +6,6 @@ import feign.FeignException;
 import heartbeat.client.JiraFeignClient;
 import heartbeat.client.dto.JiraBoardConfigDTO;
 import heartbeat.client.dto.JiraColumn;
-import heartbeat.client.dto.JiraColumnStatus;
 import heartbeat.controller.board.vo.request.BoardRequest;
 import heartbeat.controller.board.vo.response.BoardConfigResponse;
 import heartbeat.controller.board.vo.response.ColumnResponse;
@@ -15,19 +14,14 @@ import heartbeat.controller.board.vo.response.StatusSelf;
 import heartbeat.exception.RequestFailedException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import lombok.val;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.net.URI;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
 @Log4j2
@@ -42,55 +36,27 @@ public class JiraService {
 		JiraBoardConfigDTO jiraBoardConfigDTO;
 		try {
 			jiraBoardConfigDTO = jiraFeignClient.getJiraBoardConfiguration(URI.create(url), boardRequest.getBoardId(),
-				boardRequest.getToken());
+					boardRequest.getToken());
 
-			val columns = jiraBoardConfigDTO.getColumnConfig().getColumns();
-			val processColumns = processColumns(columns, boardRequest.getToken());
-
-			return BoardConfigResponse.builder()
-				.jiraColumns(jiraBoardConfigDTO.getColumnConfig()
-					.getColumns()
-					.stream()
-				.map(this::mapToResponseColumn)
-					.collect(Collectors.toList()))
-				.build();
-		} catch (FeignException e) {
+			return BoardConfigResponse.builder().jiraColumns(
+				jiraBoardConfigDTO.getColumnConfig().getColumns().stream()
+					.map(jiraColumn -> getColumnNameAndStatus(jiraColumn, boardRequest.getToken())).toList()
+			).build();
+		}
+		catch (FeignException e) {
 			log.error("Failed when call Jira to get board config", e);
 			throw new RequestFailedException(e);
 		}
 	}
 
-
-	private ArrayList<ColumnResponse> processColumns(List<JiraColumn> columns, String token) {
-		val jiraColumnNames = new ArrayList<ColumnResponse>();
-		RestTemplate restTemplate = new RestTemplate();
-
-		for (JiraColumn column : columns) {
-			if (column.getStatuses().size() > 0) {
-				ColumnValue columnValue = ColumnValue.builder().name(column.getName()).build();
-
-				for (JiraColumnStatus status : column.getStatuses()) {
-					HttpHeaders headers = new HttpHeaders();
-					headers.set(HttpHeaders.AUTHORIZATION, token);
-					HttpEntity<?> entity = new HttpEntity<>(headers);
-
-					ResponseEntity<StatusSelf> response = restTemplate.exchange(
-						status.getSelf(),
-						HttpMethod.GET,
-						entity,
-						StatusSelf.class
-					);
-
-					for (String untranslatedName : response.getBody().getUntranslatedNames()) {
-						String cardStatusName = untranslatedName.toUpperCase();
-						columnValue.getStatuses().add(cardStatusName);
-					}
-				}
-
-				jiraColumnNames.add(ColumnResponse.builder().value(columnValue).build());
-			}
-		}
-		return jiraColumnNames;
+	private ColumnResponse getColumnNameAndStatus (JiraColumn jiraColumn, String token) {
+		return ColumnResponse.builder()
+			.value(ColumnValue.builder()
+				.name(jiraColumn.getName())
+				.statuses(jiraColumn.getStatuses().stream()
+					.map(jiraColumnStatus -> getColumnStatusCategory(jiraColumnStatus.getSelf(), token).getUntranslatedName().toUpperCase()).toList())
+				.build())
+			.build();
 	}
 
 	public StatusSelf getColumnStatusCategory(String url, String token) {
@@ -107,9 +73,4 @@ public class JiraService {
 		headers.add("Authorization", token);
 		return headers;
 	}
-
-	private ColumnResponse mapToResponseColumn(JiraColumn column) {
-		return ColumnResponse.builder().value(ColumnValue.builder().name(column.getName()).build()).build();
-	}
-
 }
